# whatsapp-interaction-analysis

./: .env.example  .gitignore  .quartoignore  02.2-adicionar-contexto-externo.qmd  02.3-EDA-conteudo-interacao.qmd  03-descriptive-statistics.qmd  04-analises-avancadas.qmd  04f-embeddings-mpnet-OTIMIZADO.qmd  04h-embeddings-distiluse-OTIMIZADO.qmd  CLAUDE-zap.md  README.md  ROADMAP.md  _quarto-naked.yml  _quarto-playground.yml  _quarto.yml  backup-hiper-graph.qmd  content_preview.py  data-dictionary-zap.md  dev-notes.md  emojis.qmd  enrich-f2.qmd  final-corrected-report.txt  index.qmd  planejamento.md  pyproject.toml  renew.qmd  renew3.qmd  renew4.qmd  requirements-test.txt  requirements.txt  src  text-emojis.qmd  whatsapp-data-wranger-report-enriquecimento.qmd  workbench.qmd
QMD-BACKUPS/: 0-whatsapp-wrangling.qmd  1-pipeline.qmd  2-pipeline-v1.qmd  3-reorganized.qmd  4-final-pipeline.qmd  99-000-pipeline.qmd  analysis-plan.md  backup.qmd  enrichment.qmd  transcricao-copy.qmd  transcricao.qmd
cli/: __init__.py  __main__.py  _status.py  helpers.py  prepare.py  process.py
data/: README.md
docs/: INCREMENTAL-GUIDE.md  ROADMAP.md  SETUP-GUIDE.md  data-dictionary.md  pipeline.md
notebooks/: 00-data-discovery.qmd  00-data-profiling.qmd  01-data-cleaning.qmd  02-data-wrangling.qmd  02.1-EDA-data-wrangling.qmd  02.2-adicionar-contexto-externo.qmd  02.3-EDA-conteudo-interacao.qmd  03-contexto-externo.qmd  03-feature-engineering.qmd  04-eda-overview.qmd  04-feature-engineering.qmd  04-model-features.qmd  04.1-eda-temporal.qmd  04.2-eda-interacao.qmd  04.3-eda-conteudo.qmd  04a-sentiment-roberta.qmd  04b-sentiment-distilbert.qmd  04c-sentiment-deberta.qmd  (+18 more)
(+111 files in other folders)
