[project]
name = "whatsapp-interaction-analysis"
version = "0.1.0"
description = "End-to-end data science pipeline for WhatsApp conversation analysis"
requires-python = ">=3.11"

[project.scripts]
whatsapp-interaction = "whatsapp.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["whatsapp*"]
