[project]
name = "whatsapp-interaction-analysis"
version = "0.1.0"
description = "End-to-end data science pipeline for WhatsApp conversation analysis"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "typer[all]>=0.9.0",
    "tqdm>=4.65.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]
viz = [
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "seaborn>=0.12.0",
    "wordcloud>=1.9.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "nbformat>=5.9.0",
    "nbclient>=0.8.0",
    "ipykernel>=6.25.0",
]
transcription = [
    "groq>=0.4.0",
]
analysis = [
    "pyarrow>=12.0.0",
    "prince>=0.13.0",
]
test = [
    "pytest>=7.0.0",
]
all = [
    "whatsapp-interaction-analysis[ml,viz,jupyter,transcription,analysis,test]",
]

[project.scripts]
whatsapp-interaction = "whatsapp.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["whatsapp*"]
